devopsacad-ingress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 2
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 392102158411.dkr.ecr.us-east-2.amazonaws.com/devopsacad-d-image
        ports:
        - containerPort: 8080
