devopsacad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devopsacad-app
  namespace: devops
  labels:
    app: devopsacad-app
spec:
  containers:
    - name: devopsacad-app
      image: 171040096730.dkr.ecr.us-east-1.amazonaws.com/devops
      ports:
      - name: devopsacad-port
        containerPort: 8080
