devopsacad-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
