devopsacad-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsacad-service
  namespace: devops
spec:
  selector:
    app: devopsacad-app
  ports:
  - name: devopsacad-service
    protocol: TCP
    port: 8080
    targetPort: devopsacad-port
